--- a/project/sass/sections/_clients.scss
+++ b/project/sass/sections/_clients.scss
@@ -1,10 +1,28 @@
 .our-clients {
     padding: 70px 0;
+    background-color: #f1f1f1;
+    @media #{$maxSmall} {
+        padding: 40px 0;
+    }
+    .main-title {
+        @media #{$maxSmall} {
+            margin-bottom: 50px;
+        }
+    }
     .client-slider {
         .slider-item {
             a {
                 img {
                     max-width: 200px;
+                    margin-left: auto;
+                    margin-right: 3px;
+                    border: 2px solid $mainColor;
+                    padding: 15px;
+                    @media #{$maxSmall} {
+                        min-width: 90%;
+                        max-width: 90%;
+                        margin: auto;
+                    }
                 }
             }
         }
