--- a/project/sass/sections/_header.scss
+++ b/project/sass/sections/_header.scss
@@ -18,8 +18,8 @@
         left: 0;
         bottom: 0;
         right: 0;
-        background: url(../images/overlay.svg) no-repeat center center;
-        background-size: cover;
+        /*background: url(../images/overlay.svg) no-repeat center center;
+        background-size: cover;*/
         background-color: rgba(0, 0, 0, 0.7);
         .about-eventrah {
             align-items: center;
@@ -27,10 +27,12 @@
             height: 100%;
             margin: auto;
             width: 1000px;
+            position: relative;
+            z-index: 77;
             @media #{$maxSmall} {
                 width: auto;
                 justify-content: initial;
-                align-items: initial;
+                align-items: initial
             }
             .col-12 {
                 @media #{$maxSmall} {
