--- a/project/sass/style.scss
+++ b/project/sass/style.scss
@@ -19,7 +19,6 @@ body {
     overflow-x: hidden;
     direction: rtl;
     text-align: right;
-    height: 8000px;
     @media #{$maxSmall} {
         overflow-x: hidden;
     }
@@ -29,5 +28,30 @@ body {
 }
 a {
     text-decoration: none !important;
+}
+.google-map {
+    margin-top: 70px;
+    iframe {
+        width: 100%;
+        max-height: 300px;
+        margin-bottom: -6px;
+    }
+}
+canvas{ 
+    display: block; 
+    vertical-align: bottom; 
+} 
+#particles-js{ 
+    position:absolute; 
+    width: 100%; 
+    height: 100%;
+    background-image: url(""); 
+    background-repeat: no-repeat;
+    background-size: cover; 
+    background-position: 50% 50%; 
+    z-index: 8;
+}
+.modal-backdrop {
+   z-index: 0 !important;
 }
 /* =====[End: Global rules]===== */
